Added the final touches to Switches